# CozyMind

./: .gitignore  CHANGELOG_ENV_CONFIG.md  Cargo.toml  ENV_CONFIG.md  IMPLEMENTATION_SUMMARY.md  MQTT_CLIENT_CONFIG_EXAMPLE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SUMMARY.md  UPDATE_SUMMARY_MQTT_CLIENT.md  WORKSPACE.md  WORKSPACE_SETUP_SUMMARY.md  config.env  rumqttd.toml
ai-core/: Cargo.toml  MQTT_CLIENT_USAGE.md  OLLAMA_USAGE.md  README.md  SYSTEM_PROMPT_API.md
ai-core/src/: main.rs  mqtt.rs  ollama_client.rs  ollama_client_backup.rs  system_prompt.rs
ai-core/src/mqtt/: broker.rs  client.rs  config.rs  message.rs  mod.rs
broker/: Cargo.toml  README.md  rumqttd.toml
broker/src/: main.rs
crates/: README.md
crates/message-models/: CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md
crates/message-models/examples/: load_fixtures.rs  parse_fixtures.rs  version_demo.rs
crates/message-models/src/: lib.rs  v0.rs  version.rs
crates/message-models/tests/: fixtures_test.rs
crates/mqtt-client/: Cargo.toml  README.md
crates/mqtt-client/src/: lib.rs
crates/ollama-models/: Cargo.toml  README.md
crates/ollama-models/src/: lib.rs  models.rs  performance.rs
docs/: api-examples.md  architecture.md  development.md
gui/: .gitignore  Cargo.toml  README.md  RUST_BACKEND_README.md  msg-pre-data.json  ollama-data.json  package.json  server.js  vite.config.js
gui/frontend/: MQTT_WEBSOCKET_SETUP.md  index.html  package.json  tailwind.config.js  vite.config.ts
gui/frontend/src/: App.vue  main.ts
gui/frontend/src/components/: VirtualList.vue
gui/frontend/src/components/layout/: AppHeader.vue  AppLayout.vue  AppNav.vue
gui/frontend/src/router/: index.ts
gui/frontend/src/services/: api.ts  mqttClient.ts
gui/frontend/src/stores/: aiCoreStore.ts  chatStore.ts  messageStore.ts  modelSetupStore.ts  ollamaStore.ts
gui/frontend/src/types/: api.ts
gui/frontend/src/utils/: apiCache.ts  performance.ts
gui/frontend/src/views/: ChatView.vue  MessagesView.vue  ModelSetupView.vue  MqttTestView.vue  ServicesView.vue
gui/public/: app.js  index.html  style.css
gui/src/: handlers.rs  main.rs  models.rs  mqtt_client.rs
resources/: ai-core-data.json  msg-pre-data.json
resources/fixtures/: event_error.json  event_ok.json  user_text_ok.json
resources/schemas/v0/: envelope.json  event-content.json  user-content.json
rust-models/: Cargo.toml  README.md
rust-models/src/: lib.rs
