[package]
name = "ai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
# MQTT client dependencies
rumqttc = "0.20"
uuid = { version = "1.0", features = ["v4"] }
