[package]
name = "gui-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

# 内部依赖
mqtt-client = { path = "../crates/mqtt-client" }

# MQTT client dependencies (通过 mqtt-client 间接使用)
rumqttc = "0.20"
